# gnss_view_tui

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
data/: ground_truth.json
src/: app.rs  config.rs  demo.rs  ext.rs  lib.rs  main.rs  model.rs  pipeline.rs  recorder.rs  source.rs  ui.rs
src/parser/: custom.rs  mod.rs  nmea.rs
