[package]
name = "gnss_view_tui"
version = "0.1.0"
edition = "2024"
description = "TUI application for long-term GNSS (NMEA + private protocol) monitoring, visualization and recording"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serialport = "4.9.0"
